# skills_Manager

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml  desktop-ci.yml
skill-manager-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
skill-manager-app/release-assets/: Skill-Manager_0.3.1_macos_aarch64.app.tar.gz.sha256  release-manifest.json
skill-manager-app/scripts/: check-version-consistency.mjs  create-release-manifest.mjs
skill-manager-app/src/: App.vue  main.ts
skill-manager-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
skill-manager-app/src-tauri/capabilities/: default.json
skill-manager-app/src-tauri/icons/: icon.icns
skill-manager-app/src-tauri/permissions/: skill-manager.toml
skill-manager-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
skill-manager-app/src-tauri/src/models/: mod.rs  scan.rs  skill.rs
skill-manager-app/src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
skill-manager-app/src-tauri/src/scanner/: agents.rs  codex.rs  collector.rs  dedup.rs  mod.rs  openclaw.rs  parser.rs  utils.rs
skill-manager-app/src-tauri/src/services/: mod.rs  skill_files.rs
skill-manager-app/src/components/: AppSidebar.vue  SkillDetailPanel.vue  SkillListPanel.vue
skill-manager-app/src/composables/: useDesktopApps.ts  useKeyboardShortcuts.ts  useResizablePanels.ts  useSkillFiles.ts
skill-manager-app/src/stores/: skillStore.test.ts  skillStore.ts
skill-manager-app/src/styles/: app.css  global.css  tokens.css
skill_manager_cube_icons_all_platforms/: README.txt
(+9 files in other folders)
