[package]
name = "skill-manager-app"
version = "0.3.1"
description = "A read-only desktop manager for AI Agent skills"
authors = ["FrostTyr"]
edition = "2021"

[lib]
name = "skill_manager_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tauri = { version = "2", features = [] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_System_Registry",
  "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3.27.0"
